update description of EIP standard

--- a/EIPS/eip-5851.md
+++ b/EIPS/eip-5851.md
@@ -167,7 +167,7 @@ Defines the condition encoded for the index 1 (i.e the holder must be equal or m
        "logic": ">=",
     "value":"18"  
     }
-    Defines the condition encoded for the identity index 1, defining the identity condition that holder must be equal or more than 18 years old.
+    Defines the condition encoded for the identity index 1,that holder must be equal to or more than 18 years old.
     **/
 
     function standardClaim(uint256 SBTID) external view returns (Claim[] memory);
@@ -189,8 +189,8 @@ Defines the condition encoded for the index 1 (i.e the holder must be equal or m
 
     function changeStandardClaim(uint256 SBTID, Claim[] memory _claims) external returns (bool);
 
-    /// @notice function which uses the ZKProof protocol to validate the identity based on the given 
-    /// @dev it should only be called by the admin address.
+    /// @notice function for assigning the SBT badge with given credentials to the given user address `claim` that fullfills the terms defined by the `StandardClaim` stored in `SBTID`.
+    /// @dev it should only be called by the issuer address and MUST emit the Certified event as exaplined in next session. 
     /// @param SBTID is the Id of the SBT-based identity certificate for which admin wants to define the Claims.
     /// @param claimer is the address that needs to be proven as the owner of the SBT defined by the tokenID.
     /**
@@ -198,10 +198,10 @@ Defines the condition encoded for the index 1 (i.e the holder must be equal or m
     */
     function certify(address claimer, uint256 SBTID) external returns (bool);
 
-    /// @notice function which uses the ZKProof protocol to validate the identity based on the given 
-    /// @dev it should only be called by the admin address.
-    /// @param SBTID is the Id of the SBT-based identity certificate for which the admin wants to define the Claims.
-    /// @param claimer is the address that needs to be proven as the owner of the SBT defined by the tokenID.
+    /// @notice function for revoking the SBT assigned to the given certificate (once its analysed that standardClaim is no further valid). 
+    /// @dev it should only be called by the issuer address and MUST emit the Revoked event as explained below
+    /// @param certifying is the address of the holder of the given SBTID that is to be revoked.
+    /// @param SBTID is the identifier of the SBT i.e is to be revoked for the 
     /* eg: revoke(0xfoo,1): means that KYC admin revokes the SBT certificate number 1 for the address '0xfoo'. */
     function revoke(address certifying, uint256 SBTID) external returns (bool);
 
@@ -258,7 +258,7 @@ The [interface](../assets/eip-5851/contracts/interfaces/IERC5851.sol) is divided
 
 ## Security Considerations
 
-1. Implementation of functional interfaces for creating KYC on SBT (i.e `changeStandardClaim()`, `certify()` and `revoke()`) are dependent on the admin role. Thus the developer must insure security of admin role and rotation of this role to the entity entrusted by the KYC attestation service provider and DeFI protocols that are using this attestation service.
+1. Implementation of write functions on SBT (i.e `changeStandardClaim()`, `certify()` and `revoke()`) are dependent on the admin role (which MUST be held by issuer) and thus issuer needs to manage the keys securely.
 
 ## Copyright
 
